<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hero">Search</string>
    <string name="option">option</string>
    <string name="primary_attribute">Primary Attribute</string>
    <string name="strength">Strength</string>
    <string name="agility">Agility</string>
    <string name="intelligence">Intelligence</string>
    <string name="none">None</string>
    <string name="filter_hero">Filter Hero</string>
    <string name="_0_100">0% - 100%</string>
    <string name="_100_0">100% - 0%</string>
</resources>