<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/filter_hero"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/primary_attribute"/>
        <CheckBox
            android:id="@+id/strength_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strength"/>
        <CheckBox
            android:id="@+id/agility_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agility"/>
        <CheckBox
            android:id="@+id/intelligence_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intelligence"/>
        <CheckBox
            android:id="@+id/none_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/none"/>

        <ImageButton
            android:id="@+id/check_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/check_icon"
            android:layout_gravity="end"
            android:backgroundTint="@color/bar_color"
            />

    </LinearLayout>




</FrameLayout>